<resources>
    <string name="app_name">Lab Order</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="register_success">Registered</string>
    <string name="register_fail">Failed</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="invalid_email_or_password">Email or password is wrong</string>
    <string name="orders">Orders</string>
    <string name="current_order">Current order</string>
    <string name="logout">Logout</string>
    <string name="create_order">New order</string>
    <string name="title">Title</string>
    <string name="current_lab">Current lab</string>
    <string name="use_priority">Use priority</string>
    <string name="create">Create</string>
    <string name="reserve">Reserve</string>
    <string name="next_student">Next student</string>
    <string name="delete_order">Delete order</string>
    <string name="to_reserve">To reserve again, you need to finish current reservation</string>
    <string name="confirm_delete">Do you really want to delete this order?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="enter_labs">Enter labs in such format 1,2,3</string>

</resources>
