<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="reserve"
            type="com.laborder.bl.models.ReserveOrder" />
        
        <variable
            name="order"
            type="com.laborder.bl.models.Order" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragments.RoomFragment">
        
        <TextView
            android:text="@{order.title}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@{`Лабораторная: ` + order.currentLab}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@{`Текущий: ` + order.current == null ? `нет` : order.current.nameAndSurname}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/students"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            tools:listitem="@layout/student_info_list_row" />

        <EditText
            android:id="@+id/labs_et"
            android:hint="@string/enter_labs"
            android:text="@={reserve.labs}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/reserve_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:hint="@string/reserve" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:hint="@string/delete_order"
            android:backgroundTint="@color/colorDanger"/>
        
        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:hint="@string/next_student" />
    </LinearLayout>
</layout>